Fix hero on mobile

--- a/themes/climatestrike/css/main.css
+++ b/themes/climatestrike/css/main.css
@@ -668,6 +668,7 @@ body {
 .body-text > .hero {
   width: 100%;
   margin: 0;
+  padding: 0;
 }
 
 .page-footer {
