--- a/themes/climatestrike/scss/partials/components/_body.scss
+++ b/themes/climatestrike/scss/partials/components/_body.scss
@@ -19,5 +19,6 @@ body {
     & > .hero {
         width: 100%;
         margin: 0;
+        padding: 0;
     }
 }
